feat(text): changes text color

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 <div class="container my-3 my-lg-5 py-3 py-lg-5">
                     <div class="row align-items-center g-3 g-lg-5">
                         <div class="col-lg-6 text-center text-lg-start">
-                            <h1 class="text-white animated slideInLeft">Welcome to <br>Malabar's Flavorful Delights!</h1>
-                            <p class="text-white animated slideInLeft mb-4 pb-2">Savor the exquisite tastes of Malabar cuisine at our restaurant, where every bite takes you on a journey to God's Own Country!</p>
+                            <h1 class="text-gm-white animated slideInLeft">Welcome to <br>Malabar's Flavorful Delights!</h1>
+                            <p class="text-gm-white animated slideInLeft mb-4 pb-2">Savor the exquisite tastes of Malabar cuisine at our restaurant, where every bite takes you on a journey to God's Own Country!</p>
                             <a onclick="openOnlineOrderLink()" class="btn btn-primary-custom py-sm-3 px-sm-5 me-3 animated slideInLeft">Order Online</a>
                         </div>
                         <div class="col-lg-6 text-center text-lg-end overflow-hidden">
