feat(minified): minified and obfuscated

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
 </head>
 
 <body onload="initiateUI()">
@@ -221,13 +221,13 @@
                                 <div class="row g-3">
                                     <div class="col-md-6">
                                         <div class="form-floating">
-                                            <input type="text" class="form-control" id="customrName" maxlength="50" placeholder="Your Name">
+                                            <input type="text" class="form-control" id="customerName" maxlength="50" placeholder="Your Name">
                                             <label for="name">Your Name</label>
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-floating">
-                                            <input type="email" class="form-control" id="customrEmail" placeholder="Your Email">
+                                            <input type="email" class="form-control" id="customerEmail" placeholder="Your Email">
                                             <label for="email">Your Email</label>
                                         </div>
                                     </div>
@@ -320,7 +320,7 @@
 
     <!-- Template Javascript -->
     <script src="js/main.min.js"></script>
-    <script src="js/behaviour.js"></script>
+    <script src="js/behaviour.min.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
 </body>
 
