feat(version): added version number

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
     <!-- Template Javascript -->
     <script src="js/main.min.js"></script>
-    <script src="js/behaviour.min.js"></script>
+    <script src="js/behaviour.min.js?v=1.3"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
 </body>
 
