--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                 <img class="img-fluid rounded w-100 wow zoomIn" data-wow-delay="0.1s" src="img/menu/Main_menu2.jpeg" style="margin-bottom: 1%;margin-right: 1%;">
                             </div>
                             <div class="col-6 text-start"  style="padding: 0; margin: 0;">
-                                <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.3s" src="img/menu/Malabar_Chicken_Dum_Biryani.jpeg" style="margin-top: 16.5%;margin-left: 1.5%;">
+                                <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.3s" src="img/menu/Alleppey_Chicken_Curry.jpeg" style="margin-top: 16.5%;margin-left: 1.5%;">
                             </div>
                             <div class="col-6 text-end" style="padding: 0; margin: 0;">
                                 <img class="img-fluid rounded w-75 wow zoomIn" data-wow-delay="0.5s" src="img/menu/Fish_Nirvana.jpeg" style="margin-top: 0.5%;margin-right: 0.2%;">
@@ -189,7 +189,7 @@
             <div class="container">
                 <div class="text-center">
                     <h5 class="section-title ff-secondary text-center text-primary fw-normal">Testimonial</h5>
-                    <h1 class="mb-5">Our customrs Say!!!</h1>
+                    <h1 class="mb-5">Our customers Say!!!</h1>
                 </div>
                 <div id="testimonialDivContainer" class="container"></div>
             </div>
