--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                     <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">600</h1><h3>+</h3>
                                     <div class="ps-4">
                                         <p class="mb-0">Valuable</p>
-                                        <h6 class="text-uppercase mb-0">customr Reviews</h6>
+                                        <h6 class="text-uppercase mb-0">Customer Reviews</h6>
                                     </div>
                                 </div>
                             </div>
@@ -189,7 +189,7 @@
             <div class="container">
                 <div class="text-center">
                     <h5 class="section-title ff-secondary text-center text-primary fw-normal">Testimonial</h5>
-                    <h1 class="mb-5">Our customers Say!!!</h1>
+                    <h1 class="mb-5">Our Customers Say!!!</h1>
                 </div>
                 <div id="testimonialDivContainer" class="container"></div>
             </div>
