feat(wave): added wave and image transition

--- a/index.html
+++ b/index.html
@@ -45,12 +45,6 @@
                         <img src="img/menu/Main_menu1.jpeg">
                     </div>
                     <div class="mySlides">
-                        <img src="img/menu/Main_menu2.jpeg">
-                    </div>
-                    <div class="mySlides">
-                        <img src="img/menu/Puthiyapila_Choru.jpeg">
-                    </div>
-                    <div class="mySlides">
                         <img src="img/menu/TGM-Interior-1.jpeg">
                     </div>
                     <div class="mySlides">
@@ -63,10 +57,10 @@
                         <img src="img/menu/TGM-interior-4.jpeg">
                     </div>
                     <div class="mySlides">
-                        <img src="img/menu/Shrimp_lazeez.jpeg">
+                        <img src="img/menu/TGM-interior-5.jpeg">
                     </div>
                     <div class="mySlides">
-                        <img src="img/menu/Chemmeen_Shrimp_Fry.jpeg">
+                        <img src="img/menu/Shrimp_lazeez.jpeg">
                     </div>
                 </div>
                 <div class="overlay"></div>
@@ -87,6 +81,22 @@
                         </div>
                     </div>
                 </nav>
+                <!-- Wave Start-->
+                <div class="wave-header">
+                    <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                    viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+                    <defs>
+                    <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+                    </defs>
+                    <g class="parallax">
+                    <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
+                    <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
+                    <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+                    <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+                    </g>
+                    </svg>
+                </div>
+            <!-- Wave End-->
             </div>
         </div>
         <!-- Navbar & Hero End -->
