--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css?v=2.0" rel="stylesheet">
+    <script src="js/constants.js?v=1.0"></script>
 </head>
 
 <body class="bg-white">
@@ -73,11 +74,11 @@
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <div class="navbar-nav ms-auto py-0 pe-4">
                             <a id="homeNav" onclick="setActive('homeNav')" href="#home-section" class="nav-item nav-link">Home</a>
-                            <a id="OrderNav" onclick="openOnlineOrderLink()" href="#" class="nav-item nav-link">Order Online</a>
-                            <a id="aboutNav" onclick="setActive('aboutNav')" href="#about-section" class="nav-item nav-link">About</a>
+                            <a id="orderNav" onclick="setActive('orderNav')" href="#container-order-online-id" class="nav-item nav-link">Order Online</a>
+                            <a id="aboutNav" onclick="setActive('aboutNav')" href="#about-section" class="nav-item nav-link">Who We Are</a>
                             <a id="menuNav" onclick="setActive('menuNav')" href="#menu-section" class="nav-item nav-link">Menu</a>
                             <a id="contactNav"onclick="setActive('contactNav')" href="#connect-section" class="nav-item nav-link">Contact</a>
-                            <a id="newsDiv" onclick="openNewsLink()" href="#" class="nav-item nav-link">News</a>
+                            <!-- <a id="newsDiv" onclick="openNewsLink()" href="#" class="nav-item nav-link">News</a> -->
                         </div>
                     </div>
                 </nav>
@@ -122,14 +123,14 @@
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <h5 class="section-title ff-secondary text-start text-primary fw-normal">About Us</h5>
-                        <h1 class="mb-4">Welcome to <i class="fa fa-utensils text-primary me-2"></i>Grand Malabar</h1>
-                        <p class="mb-4 paragraph-text">Malabar is a historical and geographical region located on the southwestern coast of India, specifically in the state of Kerala. We bring the vibrant flavors and rich culinary heritage of Malabar to your plate. We invite you on a culinary adventure that showcases the unique blend of spices, aromatic herbs, and fresh ingredients that define the Malabar region.</p>
-                        <p class="mb-4 paragraph-text">Experience our warm ambiance and let our attentive staff create a memorable dining journey. Whether you're a seasoned food lover or new to Malabari cuisine, we'll transport your taste buds to the enchanting flavors of Malabar with every bite.</p>
+                        <h5 class="section-title ff-secondary text-start text-primary fw-normal">Who We Are</h5>
+                        <p class="mb-4 paragraph-text">Welcome to <b>The Grand Malabar</b>, our take on delicious food from the Indian subcontinent. Nestled at the heart of our culinary journey is a deep-rooted connection with the vibrant heritage of South India, where every dish tells a story of cultural richness and culinary excellence.</p>
+                        <p class="mb-4 paragraph-text">Our philosophy is that <b>The food we serve must not only fill your stomach but also a satisfied mind</b>, embodying our commitment to providing not just a meal but an unforgettable journey into the soul of South Indian cuisine.</p>
+                        <p class="mb-4 paragraph-text">At The Grand Malabar, we don't just serve food; we share an extraordinary feeling. Our culinary adventure began with the desire to bring the authentic tastes of South India to a global audience, transcending borders and connecting hearts through the magic of spices and flavors. From the bustling streets of Malabar to your plate, we invite you on a gastronomic voyage that captures the essence of our culinary legacy.</p>
                         <div class="row g-4 mb-4">
                             <div class="col-sm-6">
                                 <div class="d-flex align-items-center border-start border-5 border-primary px-3">
-                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">30</h1><h3>+</h3>
+                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">50</h1><h3>+</h3>
                                     <div class="ps-4">
                                         <p class="mb-0">Popular</p>
                                         <h6 class="text-uppercase mb-0">Unique Indian Cuisines</h6>
@@ -152,13 +153,32 @@
         </div>
         <!-- About End -->
 
-        <div class="second-image-container" id="background-container">
+        <div class="container-fluid py-2 wow fadeInUp container-order-online" id="container-order-online-id">
+            <div class="container">
+                <div class="text-center">
+                    <h5 class="section-title ff-secondary text-center text-primary fw-normal">Order Online</h5>
+                    <h3 class="mb-1">Online Delivery Partners</h3>
+                    <div class="container">
+                        <div class="logo-container">
+                            <img class="uber-logo" onclick="openOnlineDelivery('uber')" src="img/logo/Uber-Eats-logo.png">
+                            <img class="dash-logo" onclick="openOnlineDelivery('dash')" src="img/logo/DoorDash-logo.png">
+                            <img class="skip-logo" onclick="openOnlineDelivery('skip')" src="img/logo/skip.png">
+                        </div>
+                    </div>
+                    <div>
+                        <a class="btn btn-dark" style="cursor: default;">Reservations / Catering / Party Orders</a>
+                        <h6>Contact us on <i class="fa fa-phone-alt text-primary m-1"></i> <span onclick="window.location.href = 'tel:+15192659598';" style="cursor: pointer;">+1-519-265-9598</span></h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="second-image-container" id="order-online-id">
             <div class="second-overlay"></div>
             <!-- Add text on top -->
              <div class="second-div-text col-10">
                     <h1 class="text-white animated slideInLeft">Explore the Flavors of Malabar!</h1>
                     <p class="text-white animated slideInLeft mb-4 pb-1">Savor the exquisite tastes of Malabar cuisine at our restaurant, where every bite takes you on a journey to God's Own Country!</p>
-                    <a onclick="openOnlineOrderLink()" class="btn btn-primary animated slideInLeft">Order Online</a>
+                    <a onclick="openOnlineOrderLink()" class="btn btn-primary animated slideInLeft">Order Pick Up</a>
             </div>
         </div>
 
@@ -236,6 +256,18 @@
             </div>
         </div>
         <!-- Testimonial End -->
+
+        <!--News Div-->
+        <div class="container-fluid mt-3 mb-2 wow fadeInUp news-div" data-wow-delay="0.1s">
+            <div class="container">
+                <div class="text-center">
+                    <h5>As Seen On</h5>
+                    <div class="container mt-3">
+                    <img class="wgr-logo" src="img/logo/waterlooregion-logo.png" onclick="openNewsLink()" alt="Logo">
+                </div>
+                </div>
+            </div>
+        </div>
         
         <!-- Contact Start -->
         <div class="container-fluid py-5" id="connect-section">
@@ -292,8 +324,22 @@
         <!-- Contact End -->
 
         <!-- Footer Start -->
-        <div class="footer text-light footer pt-3 mt-3 wow fadeIn" data-wow-delay="0.1s">
+        <div class="footer text-light footer pt-3 mt-5 wow fadeIn" data-wow-delay="0.1s">
             <div class="footer-overlay"></div>
+            <div class="wave-footer">
+                <svg class="waves-footer" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
+                <defs>
+                <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z" />
+                </defs>
+                <g class="parallax">
+                <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7" />
+                <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)" />
+                <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)" />
+                <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff" />
+                </g>
+                </svg>
+            </div>
             <div class="container py-3 footer-text">
                 <div class="row g-5">
                     <div class="col" style="z-index: 2 !important;">
@@ -305,9 +351,7 @@
                         <h4 class="section-title ff-secondary text-start text-primary fw-normal mb-4">Follow us</h4>
                         <div class="list-container">
                             <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/thegrandmalabar/" target="_blank"><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/profile.php?id=100088486575255" target="_blank"><i class="fab fa-facebook-f"></i></a>
                         </div>
                     </div>
                     <div class="col" style="z-index: 2 !important;">
